# fastapi-rbac-auth-service

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/db/: base.py  models.py  seed.py  session.py
app/repositories/: access.py  users.py
app/routers/: __init__.py  access.py  auth.py  business.py  users.py
app/schemas/: access.py  auth.py  users.py
app/services/: access.py  auth.py  users.py
migrations/: env.py
migrations/versions/: a7fe86a4602d_create_auth_access_tables.py
