[project]
name = "fastapi-rbac-auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Kan Alexandr",email = "kan.a@delotech.ru"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
