[project]
name = "fastapi-rbac-auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Kan Alexandr",email = "kan.a@delotech.ru"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
